fixed code smells